refactor(core): change bg class names

--- a/apps/bulldozer-client/src/styles/core/backgrounds.scss
+++ b/apps/bulldozer-client/src/styles/core/backgrounds.scss
@@ -1,50 +1,50 @@
-.bp-bg-image-8,
-.bp-bg-metal-2,
-.bp-bg-stone-3,
-.bp-bg-stone-2,
-.bp-bg-stone,
-.bp-bg-bulldozer {
+.bg-bp-image-8,
+.bg-bp-metal-2,
+.bg-bp-stone-3,
+.bg-bp-stone-2,
+.bg-bp-stone,
+.bg-bp-bulldozer {
 	background-size: cover;
 }
 
-.bp-bg-wood,
-.bp-bg-bricks,
-.bp-bg-metal {
+.bg-bp-wood,
+.bg-bp-bricks,
+.bg-bp-metal {
 	background-repeat: repeat !important;
 }
 
-.bp-bg-metal {
+.bg-bp-metal {
 	background-image: url('../../assets/images/backgrounds/metal.png');
 }
 
-.bp-bg-metal-2 {
+.bg-bp-metal-2 {
 	background-image: url('../../assets/images/backgrounds/metal-2.webp');
 }
 
-.bp-bg-bricks {
+.bg-bp-bricks {
 	background-image: url('../../assets/images/backgrounds/bricks.webp');
 }
 
-.bp-bg-wood {
+.bg-bp-wood {
 	background-image: url('../../assets/images/backgrounds/wood.webp');
 }
 
-.bp-bg-stone {
+.bg-bp-stone {
 	background-image: url('../../assets/images/backgrounds/sidebar.webp');
 }
 
-.bp-bg-stone-2 {
+.bg-bp-stone-2 {
 	background-image: url('../../assets/images/backgrounds/list_element.webp');
 }
 
-.bp-bg-stone-3 {
+.bg-bp-stone-3 {
 	background-image: url('../../assets/images/backgrounds/tabs.png');
 }
 
-.bp-bg-bulldozer {
+.bg-bp-bulldozer {
 	background-image: url('../../assets/images/backgrounds/bulldozer.webp');
 }
 
-.bp-bg-image-8 {
+.bg-bp-image-8 {
 	background-image: url('../../assets/images/backgrounds/wood_sign.webp');
 }
