--- a/apps/drill-github-app/src/views/import.handlebars
+++ b/apps/drill-github-app/src/views/import.handlebars
@@ -18,13 +18,13 @@
 	</head>
 
 	<style>
-		.bp-bg-bricks { background-image:
+		.bg-bp-bricks { background-image:
 		url(https://bulldozer.heavyduty.builders/bricks.10eeefe04eda7b60.webp);
 		background-repeat: repeat !important; } .bp-color-white { color:
 		#e6e6e6!important; }
 	</style>
 
-	<body class='bg-gray-light bp-bg-bricks bp-color-white'>
+	<body class='bg-gray-light bg-bp-bricks bp-color-white'>
 		<div
 			class='d-flex flex-column flex-justify-center flex-items-center text-center height-full py-6'
 		>
