--- a/apps/drill-github-app/src/views/setup.handlebars
+++ b/apps/drill-github-app/src/views/setup.handlebars
@@ -17,15 +17,15 @@
 	</head>
 
 	<style>
-		.bp-bg-bricks { background-image:
+		.bg-bp-bricks { background-image:
 		url(https://bulldozer.heavyduty.builders/bricks.10eeefe04eda7b60.webp);
 		background-repeat: repeat !important; } .bp-color-white { color:
-		#e6e6e6!important; } .bp-bg-metal { background-image:
+		#e6e6e6!important; } .bg-bp-metal { background-image:
 		url(https://bulldozer.heavyduty.builders/metal.c597070156772819.png);
 		background-repeat: repeat!important; padding: 1rem; background-color:
 		#121212;} a { color: #E69400; }
 	</style>
-	<body class='height-full bg-gray-light bp-bg-bricks bp-color-white'>
+	<body class='height-full bg-gray-light bg-bp-bricks bp-color-white'>
 		<div
 			class='d-flex flex-column flex-justify-center flex-items-center text-center height-full'
 		>
@@ -35,7 +35,7 @@
 				width='100'
 				class='mb-6'
 			/>
-			<div class='box-shadow rounded-2 p-6 bg-white bp-bg-metal'>
+			<div class='box-shadow rounded-2 p-6 bg-white bg-bp-metal'>
 				<h1>
 					Welcome to
 					{{#if pkg.name}}{{pkg.name}}{{else}}your Drill app{{/if}}
